syntax = "proto3";

package order.v1;

service OrderService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Pay(PayRequest) returns (PayResponse);
  rpc Cancel(CancelRequest) returns (CancelResponse);
}

message CreateRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

message CreateResponse {
  int64 order_id = 1;
}

message PayRequest {
  int64 order_id = 1;
}

message PayResponse {}

message CancelRequest {
  int64 order_id = 1;
}

message CancelResponse {}
